@@ -11,7 +11,7 @@
           <div class="page-header">
             <h1>
               <a id="menu-toggle" ng-click="toggleSidebar()" class="btn btn-default"><i class="fa fa-bars"></i></a>
-              <span>{{table_label}}</span>
+	      <span>{{table_label}} <span ng-show="isParted" class="small">(partitioned)<span></span>
             </h1>
           </div>
         </div>
