@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - fix: calculate health for each partition of a partitioned table
+   based on the number of shards of that partition
+
 2015/02/04 0.11.3
 =================
 
